--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@types/node": "^10.17.5",
     "husky": "^3.0.9",
-    "standard-version": "^7.0.0"
+    "standard-version": "^7.0.0",
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2"
   }
 }
