style: allow type aliases

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "mocha": true
   },
   "rules": {
-    "max-len": ["error", 120]
+    "max-len": ["error", 120],
+    "@typescript-eslint/consistent-type-definitions": "off"
   }
 }
