chore: add prerelease script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "prerelease": "yarn build",
     "release": "standard-version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
