--- a/package.json
+++ b/package.json
@@ -36,5 +36,15 @@
     "standard-version": "^7.0.0",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
