--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "tsc",
     "prerelease": "yarn build",
     "release": "standard-version",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint-ts": "eslint --ext .ts ."
   },
   "repository": {
     "type": "git",
